Closed Bug 565847 Opened 15 years ago Closed 15 years ago

[OS/2] follow-up for icondecoder changes

Categories

(Core :: Graphics: ImageLib, defect)

x86
OS/2
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: wuno, Assigned: wuno)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.3a5pre) Gecko/20100511 Minefield/3.7a5pre Build Identifier: Bug559496 changed some code in icondecoders. Now, the OS/2 build breaks when compiling modules/libpr0n/decoders/icon/os2/nsIconChannel.cpp. Follow-up is to change the code in that file analogous to what have been changed in the respective windows file. Reproducible: Always
Blocks: 559496
Version: unspecified → Trunk
Assignee: nobody → wuno
Status: NEW → ASSIGNED
Attachment #445304 - Flags: review?(joshmoz)
Attachment #445304 - Flags: review?(joshmoz) → review+
Keywords: checkin-needed
Whiteboard: Build fix for OS/2 NPOTB
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: Build fix for OS/2 NPOTB
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: