[OS/2] Bug 565847 - follow-up for icondecoder changes, r=joshmoz